--- a/RemindAlarm/app/src/main/res/values/themes.xml
+++ b/RemindAlarm/app/src/main/res/values/themes.xml
@@ -16,6 +16,6 @@
     </style>
 
     <style name="Theme.RemindAlarm.NoActionBar" parent="Theme.MaterialComponents.NoActionBar">
-
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
