--- a/RemindAlarm/app/src/main/res/values/themes.xml
+++ b/RemindAlarm/app/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.RemindAlarm" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/teal_700</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -13,5 +13,9 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Theme.RemindAlarm.NoActionBar" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
