feat: 벨소리 선택 UI

--- a/RemindAlarm/app/src/main/res/layout/item_reminder_add.xml
+++ b/RemindAlarm/app/src/main/res/layout/item_reminder_add.xml
@@ -11,13 +11,14 @@
 
         <variable
             name="item"
-            type="com.impactrudia.remindalarm.presentation.model.Alarm" />
+            type="com.impactrudia.remindalarm.presentation.ui.domain.AlarmModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp">
+        android:layout_height="56dp"
+        android:onClick="@{clickListener}">
 
         <ImageView
             android:id="@+id/imgAlarm"
