--- a/RemindAlarm/app/src/main/res/layout/fragment_reminder_main.xml
+++ b/RemindAlarm/app/src/main/res/layout/fragment_reminder_main.xml
@@ -33,6 +33,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/layoutAddReminder"
         tools:listitem="@layout/item_reminder_add" />
