--- a/RemindAlarm/app/src/main/res/layout/item_ring_tone.xml
+++ b/RemindAlarm/app/src/main/res/layout/item_ring_tone.xml
@@ -11,14 +11,15 @@
 
         <variable
             name="item"
-            type="com.impactrudia.remindalarm.presentation.model.Alarm" />
+            type="com.impactrudia.remindalarm.presentation.ui.domain.RingtoneModel" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/second_background"
         android:layout_width="match_parent"
-        android:layout_height="74dp">
+        android:layout_height="74dp"
+        android:background="@color/second_background"
+        android:onClick="@{clickListener}">
 
         <ImageView
             android:id="@+id/imgAlarm"
@@ -31,28 +32,29 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textTime"
+            android:id="@+id/textTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            app:layout_constraintBottom_toTopOf="@id/textMemo"
+            android:text="@string/ringtone_en"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/textMusicTitle"
             app:layout_constraintStart_toEndOf="@id/imgAlarm"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            android:textStyle="bold"
-            android:text="@string/ringtone_en" />
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
-            android:id="@+id/textMemo"
+            android:id="@+id/textMusicTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:gravity="center_vertical"
             android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:text="@{item.title}"
             android:textColor="@color/text_blue_point"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgAlarm"
-            app:layout_constraintTop_toBottomOf="@+id/textTime"
+            app:layout_constraintTop_toBottomOf="@+id/textTitle"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="Homecoming" />
 
